schema/testdata/validation_expression_prevent_walking_backwards/schema.keel
model Post {
    fields {
        title Text
        author Author
    }

    @permission(
        expression: post.author.posts.title == "foo",
        actions: [get]
    )
}

model Author {
    fields {
        posts Post[]
    }
}
