schema/testdata/errors/permission_attribute_expression_forbidden_operator.keel
model Profile {
    fields {
        username Text
    }

    @permission(
        //expect-error:21:48:AttributeExpressionError:assignment operator '=' not valid - did you mean to use the comparison operator '=='?
        expression: profile.username = "adaam2",
        actions: [get]
    )
}
